--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -38,7 +38,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/frameLayout4"
         app:layout_constraintTop_toBottomOf="@+id/textView8"
-        tools:ignore="TextSizeCheck" />
+        tools:ignore="TextSizeCheck,TextContrastCheck,TextContrastCheck" />
 
     <FrameLayout
         android:id="@+id/frameLayout4"
@@ -53,7 +53,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            tools:ignore="UselessParent">
 
             <TextView
                 android:id="@+id/fullname"
@@ -61,9 +62,10 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:fontFamily="@font/roboto_medium"
-                android:text="Full name"
+                android:text="@string/full_name"
                 android:textColor="@color/gray_light"
-                android:textSize="14sp" />
+                android:textSize="14sp"
+                tools:ignore="TextContrastCheck" />
 
             <Space
                 android:layout_width="match_parent"
@@ -81,7 +83,7 @@
                 android:paddingStart="8dp"
                 android:textColor="@color/text_secondary"
                 android:textSize="14sp"
-                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
+                tools:ignore="RtlSymmetry,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
             <Space
                 android:layout_width="match_parent"
@@ -108,6 +110,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="36dp"
                 android:layout_weight="1"
+                android:autofillHints="phone"
                 android:background="@drawable/inputfieldgray"
                 android:fontFamily="@font/roboto_medium"
                 android:inputType="phone"
@@ -131,7 +134,8 @@
                 android:fontFamily="@font/roboto_medium"
                 android:text="@string/email_address"
                 android:textColor="@color/gray_light"
-                android:textSize="14sp" />
+                android:textSize="14sp"
+                tools:ignore="TextContrastCheck" />
 
             <Space
                 android:layout_width="match_parent"
@@ -146,10 +150,11 @@
                 android:background="@drawable/inputfieldgray"
                 android:fontFamily="@font/roboto_medium"
                 android:inputType="textEmailAddress"
+                android:autofillHints="emailAddress"
                 android:paddingStart="8dp"
                 android:textColor="@color/text_primary"
                 android:textSize="14sp"
-                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
+                tools:ignore="LabelFor,RtlSymmetry,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
             <Space
                 android:layout_width="match_parent"
@@ -164,7 +169,8 @@
                 android:fontFamily="@font/roboto_medium"
                 android:text="@string/password"
                 android:textColor="@color/gray_light"
-                android:textSize="14sp" />
+                android:textSize="14sp"
+                tools:ignore="TextContrastCheck" />
 
             <Space
                 android:layout_width="match_parent"
@@ -179,12 +185,13 @@
                 android:background="@drawable/inputfieldgray"
                 android:fontFamily="@font/roboto_medium"
                 android:hint="@string/password1"
+                android:autofillHints="password"
                 android:inputType="text|textPassword"
                 android:paddingStart="8dp"
                 android:textColor="@color/text_primary"
                 android:textColorHint="@color/gray_light"
                 android:textSize="14sp"
-                tools:ignore="TouchTargetSizeCheck" />
+                tools:ignore="RtlSymmetry,TextContrastCheck,TouchTargetSizeCheck" />
 
             <Space
                 android:layout_width="match_parent"
@@ -216,10 +223,11 @@
                 android:hint="@string/password2"
                 android:inputType="textPassword"
                 android:paddingStart="8dp"
+                android:autofillHints="password"
                 android:textColor="@color/text_primary"
                 android:textColorHint="@color/gray_light"
                 android:textSize="14sp"
-                tools:ignore="TouchTargetSizeCheck" />
+                tools:ignore="RtlSymmetry,TouchTargetSizeCheck" />
 
             <Space
                 android:layout_width="match_parent"
@@ -233,17 +241,18 @@
 
                 <TableRow
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    tools:ignore="UselessParent">
 
                     <CheckBox
                         android:id="@+id/TaCappbox"
-                         android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_gravity="center"
                         android:layout_weight="0"
                         android:button="@drawable/selectorcbox"
                         android:clickable="true"
-                        android:minHeight="48dp"  />
+                        android:minHeight="48dp"
+                        tools:ignore="TouchTargetSizeCheck" />
 
                     <TextView
                         android:id="@+id/TaCapp"
@@ -256,7 +265,7 @@
                         android:paddingStart="8dp"
                         android:text="@string/by_ticking_this_box_you_agree_to_our_terms_and_conditions_and_private_policy"
                         android:textColor="@color/gray_light"
-                        tools:ignore="TextContrastCheck">
+                        tools:ignore="RtlSymmetry,TextContrastCheck">
 
                     </TextView>
 
@@ -282,11 +291,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="top"
-            android:background="@drawable/signup"
+            android:background="@drawable/signupgray"
             android:fontFamily="@font/roboto_bold"
             android:text=""
             android:textColor="@android:color/white"
-            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />
+            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,TouchTargetSizeCheck"
+            android:contentDescription="@string/signup" />
 
         <FrameLayout
             android:layout_width="match_parent"
@@ -298,7 +308,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:visibility="visible">
+                android:visibility="visible"
+                tools:ignore="UselessParent">
 
                 <TableRow
                     android:layout_width="match_parent"
@@ -314,7 +325,7 @@
                         android:textColor="#A7A7A7"
                         android:textSize="14sp"
                         android:visibility="visible"
-                        tools:ignore="TextSizeCheck" />
+                        tools:ignore="TextSizeCheck,TextContrastCheck" />
 
                     <TextView
                         android:id="@+id/signin"
