--- a/app/src/main/res/layout/activity_home_s2.xml
+++ b/app/src/main/res/layout/activity_home_s2.xml
@@ -5,15 +5,13 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
-    tools:context=".MainActivity">
+    tools:context=".home_s2">
 
-    <ImageView
-        android:id="@+id/framewhite"
+    <TextView
+        android:id="@+id/HomeText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/splashwhite"
-        android:importantForAccessibility="no"
+        android:text="Home"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
