--- a/app/src/main/res/layout/activity_otpverification_s2.xml
+++ b/app/src/main/res/layout/activity_otpverification_s2.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".otpverification">
+    tools:context=".otpverification_s2">
 
     <FrameLayout
         android:id="@+id/frameLayout"
