--- a/app/src/main/res/layout/activity_signup_s2.xml
+++ b/app/src/main/res/layout/activity_signup_s2.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".signup">
+    tools:context=".signup_s2">
 
     <TextView
         android:id="@+id/textView8"
